DV-2 Ability for user model to store a list of info
Added ability to store list of user info in mongodb

--- a/view/dataviz.html
+++ b/view/dataviz.html
@@ -1,5 +1,6 @@
 <ul ng-repeat="userID in userList">
-    <li><a href="" ng-click="getUserInfo(userID.encodedId)">{{userID.encodedId}}</a> - {{userID.joinDate}}</li>
+    <li><a href="" ng-click="getUserInfo(userID.encodedId)">{{userID.encodedId}}</a> - {{userID.joinDate}} -
+        <a href="" ng-click="refreshUserInfo(userID.encodedId)">(refresh)</a></li>
 </ul>
 
 
